# botcrew

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.planning/: PROJECT.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_agent_lifecycle.py  003_communication_core.py  004_heartbeat_autonomy.py  005_projects_workspaces.py  006_task_system.py  007_project_notes.py  008_channel_types_token_tracking.py
containers/agent/: Dockerfile  entrypoint.sh  requirements.txt
containers/agent/agent/: agent_runtime.py  boot.py  config.py  heartbeat.py  main.py  model_factory.py
containers/browser-sidecar/: Dockerfile  entrypoint.sh  requirements.txt
containers/browser-sidecar/api/: browser_ops.py  env.py  logger.py  main.py  models.py  session.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  channels.ts  client.ts  integrations.ts  messages.ts  projects.ts  secrets.ts  skills.ts  tasks.ts
frontend/src/hooks/: use-agents.ts  use-channels.ts  use-integrations.ts  use-mention-autocomplete.ts  use-messages.ts  use-projects.ts  use-secrets.ts  use-skills.ts  use-tasks.ts  use-websocket.ts
frontend/src/lib/: constants.ts  schemas.ts
frontend/src/pages/: agent-create.tsx  agent-detail.tsx  dashboard.tsx  integrations.tsx  not-found.tsx  projects.tsx  (+3 more)
helm/botcrew/: Chart.yaml  NOTES.txt  values-prod.yaml  values.yaml
scripts/: dev-setup.sh
src/botcrew/: __init__.py  app.py  config.py  database.py  redis.py
(+148 files in other folders)
